added OrderPOS and order Type and tested them
